panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__arithmetic__test_postincrement.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/arithmetic/test_postincrement.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arithmetic/test_postincrement.c"
   (declaration putchar~0 `fn(∅: int) -> int` ∅)
   (declaration printf~1 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      f~2 `fn(p: ptr<int>) -> ptr<int>`
      (params
         p~4 `ptr<int>`)
      (compound-statement
         (expression
            (call (name putchar~0 `fn(∅: int) -> int`)
               65))
         (expression
            (call (name putchar~0 `fn(∅: int) -> int`)
               10))
         (return (name p~4 `ptr<int>`))))
   (function-definition
      main~5 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~7 `int`
         argv~8 `ptr<ptr<char>>`)
      (compound-statement
         (declaration x~9 `int` 42)
         (expression
            (call (name printf~1 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~8 `ptr<ptr<char>>`) 1)
               (post-increment (name x~9 `int`))))
         (expression
            (call (name printf~1 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~8 `ptr<ptr<char>>`) 1)
               (name x~9 `int`)))
         (expression
            (call (name printf~1 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~8 `ptr<ptr<char>>`) 1)
               (post-increment
                  (deref
                     (call (name f~2 `fn(p: ptr<int>) -> ptr<int>`)
                        (addressof (name x~9 `int`)))))))
         (expression
            (call (name printf~1 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~8 `ptr<ptr<char>>`) 1)
               (name x~9 `int`)))
         (return (name x~9 `int`)))))

----- stderr -----
